--- a/New CRUD/Views/Post/Index.cshtml
+++ b/New CRUD/Views/Post/Index.cshtml
@@ -33,7 +33,8 @@
 		      <td>@item.Title</td> 
 		      <td>@item.Content</td> 
 		      <td>@item.Date</td> 
-		      <td><img alt="ImageUrl" src="@item.ImageUrl"/></td>  
+		      <td><img alt="ImageUrl" src="@item.ImageUrl"/></td>
+			  <td><a asp-action="Delete" asp-controller="Post" asp-route-id="@item.Id.ToString()" class="delete btn-danger">Delete</a></td>
 		  </tr>
 		}
 
