--- a/New CRUD/Views/Post/Index.cshtml
+++ b/New CRUD/Views/Post/Index.cshtml
@@ -9,34 +9,35 @@
 @if (TempData.ContainsKey("Status"))
 {
 	<div class="alert alert-warning alert-dismissible fade show" role="alert">
-  <strong>Notification!</strong> @TempData["Status"].
-  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-</div>
+	<strong>Notification!</strong> @TempData["Status"].
+	<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
 }
 
 <table class="table">
-  <thead>
-	<tr>
-	  <th scope="col">#</th>
-	  <th scope="col">Title</th>
-	  <th scope="col">Content</th>
-	  <th scope="col">Date</th>
-	  <th scope="col">ImageUrl</th>
-	</tr>
-  </thead>
-  <tbody>
+    <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">Title</th>
+            <th scope="col">Content</th>
+            <th scope="col">Date</th>
+            <th scope="col">ImageUrl</th>
+        </tr>
+    </thead>
+    <tbody>
 
-		@foreach (var item in @Model)
-		{
-		   <tr>
-	   	      <th scope="row">@(count++)</th>
-		      <td>@item.Title</td> 
-		      <td>@item.Content</td> 
-		      <td>@item.Date</td> 
-		      <td><img alt="ImageUrl" src="@item.ImageUrl"/></td>
-			  <td><a asp-action="Delete" asp-controller="Post" asp-route-id="@item.Id.ToString()" class="delete btn-danger">Delete</a></td>
-		  </tr>
-		}
+        @foreach (var item in @Model)
+        {
+            <tr>
+                <th scope="row">@(count++)</th>
+                <td>@item.Title</td>
+                <td>@item.Content</td>
+                <td>@item.Date</td>
+                <td><img alt="ImageUrl" src="@item.ImageUrl" /></td>
+                <td><a asp-action="Edit" asp-controller="Post" asp-route-id="@item.Id.ToString()" class="edit btn-warning">Edit</a></td>
+                <td><a asp-action="Delete" asp-controller="Post" asp-route-id="@item.Id.ToString()" class="delete btn-danger">Delete</a></td>
+            </tr>
+        }
 
-  </tbody>
+    </tbody>
 </table>
