--- a/New CRUD/Views/Post/Edit.cshtml
+++ b/New CRUD/Views/Post/Edit.cshtml
@@ -6,19 +6,25 @@
 <h1>EditPost</h1>
 
 
-<form asp-action="Add" asp-controller="Post" method="post" enctype="multipart/form-data">
+<form asp-action="Update" asp-controller="Post" asp-route-id="@Model.Id.ToString()" method="post" enctype="multipart/form-data">
     <div asp-validation-summary="All" class="text-danger"></div>
 
     <div class="form-group">
         <label asp-for="Title"></label>
-        <input asp-for="Title" class="form-control" />
+        <input asp-for="Title" class="form-control" value="@Model.Title"/>
         <span class="text-danger" asp-validation-for="Title"></span>
     </div>
 
-    <div class="mb-3">
-        <label for="formFileMultiple" class="form-label">Multiple files input example</label>
-        <input name="ImageUrl" class="form-control" type="file" id="formFileMultiple" multiple>
+    <div class="form-group">
+        <label asp-for="ImageUrl"></label>
+        <input asp-for="ImageUrl" class="form-control" value="@Model.ImageUrl" />
+        <span class="text-danger" asp-validation-for="ImageUrl"></span>
     </div>
+
+@*    <div class="mb-3">
+        <label for="formFileMultiple" class="form-label">Multiple files input</label>
+        <input name="ImageUrl" class="form-control" type="file" id="formFileMultiple" multiple value="@Model.ImageUrl">
+    </div>*@
 
     <div class="form-group">
         <label asp-for="Content"></label>
@@ -29,11 +35,11 @@
     <div class="form-group">
         <div class="row">
             <div class="col-6">
-                <input type="submit" class="form-control btn btn-primary" value="Add" />
+                <input type="submit" class="form-control btn btn-primary" value="Save" />
             </div>
-            <div class="col-6">
+@*            <div class="col-6">
                 <a asp-action="Index" asp-controller="Post" class="form-control btn btn-primary">Cancel</a>
-            </div>
+            </div>*@
         </div>
     </div>
 </form>
